# Scratch

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  ScratchConfig.cmake  libscratch.sln
Scratch/: Array.hpp  Assert.hpp  CDictionary.cpp  CDictionary.h  CException.cpp  CException.h  CFileStream.cpp  CFileStream.h  CFilename.cpp  CFilename.h  CMemoryStream.cpp  CMemoryStream.h  CMutex.cpp  CMutex.h  CNetworkStream.cpp  CNetworkStream.h  CStackArray.cpp  CStackArray.h  CStream.cpp  CStream.h  CString.cpp  CString.h  CVectors.h  Common.cpp  Common.h  Dictionary.hpp  Exception.hpp  FileStream.hpp  Filename.hpp  Function.hpp  LinkedList.hpp  MemoryStream.hpp  Mutex.hpp  NetworkStream.hpp  Scratch.h  Scratch.hpp  StackArray.hpp  Stream.hpp  String.hpp  utf8.h
ScratchTests/: main.cpp  main_no_threadsafe.cpp  main_no_utf8.cpp
libscratch/: CDictionary.cpp  CDictionary.h  CFileStream.cpp  CFileStream.h  CMatrix.cpp  CMatrix.h  CMemoryStream.cpp  CMemoryStream.h  CNetworkStream.cpp  CNetworkStream.h  CStackArray.cpp  CStackArray.h  CStream.cpp  CStream.h  CString.cpp  CString.h  CVectors.cpp  CVectors.h  Common.cpp  Common.h  Scratch.h  libscratch.vcxproj  libscratch.vcxproj.filters
libscratch_test/: libscratch_test.vcxproj  main.cpp
src/: Assert.cpp  CContainer.cpp  CContainer.h  CDictionary.cpp  CDictionary.h  CFileStream.cpp  CFileStream.h  CFilename.cpp  CFilename.h  CMemoryStream.cpp  CMemoryStream.h  CNetworkStream.cpp  CNetworkStream.h  CStackArray.cpp  CStackArray.h  CStream.cpp  CStream.h  CString.cpp  CString.h  CVectors.h  Common.cpp  Common.h  Scratch.h
src/Scratch/: CContainer.cpp  CDictionary.cpp  CDictionary.h  CException.cpp  CException.h  CFileStream.cpp  CFileStream.h  CFilename.cpp  CFilename.h  CMemoryStream.cpp  CMemoryStream.h  CMutex.cpp  CMutex.h  CNetworkStream.cpp  CStackArray.cpp  CStackArray.h  CStream.cpp  CStream.h  CString.cpp  CString.h  CVectors.cpp  CVectors.h  Common.h  Scratch.h
src/ScratchTests/: main.cpp
